use-cases/workshops/K8s-fundamentals/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: nginxdemos/nginx-hello:0.1-plain-text
        ports:
        - containerPort: 8080
