use-cases/workshops/K8s-fundamentals/mistake-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-100
spec:
  type: mistake
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: app1
