use-cases/workshops/K8s-fundamentals/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: app1
